set min height instead of height for description to stop text from clipping out

--- a/style.css
+++ b/style.css
@@ -338,7 +338,7 @@ td:first-child {
 }
 
 .box-description {
-    height: 400px;
+    min-height: 400px;
     top: 80px;
     border: 1px solid rgba(255, 255, 255, 0.2);
     display: flex;
